Made global changes to background and font type; adjusted responsive design on both the registration page and navigation bar (unwanted horizontal scrolling resolved)

--- a/studentpulse-ui/src/Components/DefaultNavBar/DefaultNavBar.css
+++ b/studentpulse-ui/src/Components/DefaultNavBar/DefaultNavBar.css
@@ -5,6 +5,7 @@
     background-color: #19335A;
     width: 100vw;
     vertical-align:middle;
+    position: fixed;
 }
 
 .navbar-content{
