--- a/studentpulse-ui/src/Pages/Registration Page/RegistrationPage.css
+++ b/studentpulse-ui/src/Pages/Registration Page/RegistrationPage.css
@@ -1,11 +1,20 @@
 .register-page{
     display: flex;
+    width: 97vw;
     justify-content: space-evenly;
-    width: 100vw;
+    /* background: url("../../Images/registration-hero.jpg");
+    background-size: cover; */
+    margin-top: 4em;
+    /* box-shadow: inset 0 0 0 2000px rgba(20, 19, 102, 0.3); */
+}
+
+.logo-vector{
+    height: 10%;
 }
 
 .register-page-content{
-    width: 50%;
+    width: 100%;
+    /* border: 2px solid #8FC8EB; */
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -13,10 +22,15 @@
 }
 
 .hero-image{
-    width: 50%;
+    width: 100%;
     display:flex;
+    content: "";
     justify-content: center;
-    background-color: #8FC8EB;
+    /* background-color: #8FC8EB; */
+
+    background: url("../../Images/registration-hero2.jpg");
+    background-size: cover;
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.45);
 }
 
 .input-field-section{
@@ -27,7 +41,8 @@
 }
 
 .register-form{
-    width: 80%;
+    /*width: 80%;*/
+
 }
 
 label{
@@ -44,6 +59,7 @@ input{
 
 input:focus{
     background-color: #eaeaf1;
+    font-family: inherit;
 }
 
 .name-field{
@@ -65,4 +81,10 @@ input:focus{
 
 .register-page-button:hover{
     background-image: linear-gradient(rgb(0 0 0/40%) 0 0);
+}
+
+a.sign-in-link, a.sign-in-link:hover, a.sign-in-link:active, a.sign-in-link:visited, a.sign-in-link:focus {
+    text-decoration: underline;
+    font-weight: bold;
+    color: #697A98
 }
